if(BUILD_BULLET3)
	add_subdirectory(Bullet3OpenCL)
	add_subdirectory(Bullet3Serialize/Bullet2FileLoader)
	add_subdirectory(Bullet3Dynamics)
	add_subdirectory(Bullet3Collision)
	add_subdirectory(Bullet3Geometry)
	add_subdirectory(Bullet3Common)
	add_subdirectory(BulletInverseDynamics)
endif()

add_subdirectory(BulletSoftBody)
add_subdirectory(BulletCollision)
add_subdirectory(BulletDynamics)
add_subdirectory(LinearMath)

if(INSTALL_LIBS)
	if(APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		# Don't actually need to install any common files, the frameworks include everything
	else()
		install(FILES btBulletCollisionCommon.h btBulletDynamicsCommon.h  DESTINATION ${INCLUDE_INSTALL_DIR})
	endif()
endif(INSTALL_LIBS)
